# pulse

./: .gitignore  1  CLAUDE.md  HEALTH_DASHBOARD.md  __main__.py  config.yaml  error_log.txt  pyproject.toml  requirements.txt  run.sh  test_header.py  test_header_footer.py  test_health_dashboard.py  validate_css.py
backend/api/: server.py
backend/config/: loader.py  models.py
backend/core/: connection_engine.py  device_manager.py  events.py  fetch_engine.py  health_alert_manager.py  health_models.py  interface_def.yaml  interface_discovery.py  logic_engine.py  message_engine.py  metrics_def.yaml  optical_diagnostics.py  twamp_engine.py
backend/utils/: logging.py
frontend/styles/: dark.tcss
frontend/ui/: app.py
frontend/ui/mixins/: event_subscriber.py
frontend/ui/screens/: connection.py  dashboard.py  device_management.py  facts.py  fetch_results.py  health_dashboard.py  help_screen.py  prism.py  realtime_dashboard.py
frontend/ui/styles/: activity_log.tcss  connection_screen.tcss  dark.tcss  dashboard.tcss  device_list_widget.tcss  device_management.tcss  facts.tcss  fetch_panel.tcss  fetch_results.tcss  footer.tcss  header.tcss  health_dashboard.tcss  help_screen.tcss  modular_footer.tcss  modular_header.tcss  panels.tcss  prism.tcss  realtime_dashboard.tcss  title_field.tcss
frontend/ui/widgets/: activity_log.py  dashboard_footer.py  device_list_widget.py  device_management_footer.py  device_management_header.py  facts_footer.py  facts_header.py  fetch_panel.py  (+15 more)
tests/: conftest.py  test_alert_manager.py  test_connection.py  test_logic.py  test_ws.py
